; ModuleID = '/home/carl/AnghaBench/libgit2/tests/path/extr_core.c_test_path_core__make_relative.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/path/extr_core.c_test_path_core__make_relative.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"foo.c\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"/path/to/foo.c\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"/path/to\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"bar/foo.c\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"/path/to/bar/foo.c\00", align 1
@.str.5 = private unnamed_addr constant [10 x i8] c"/path/to/\00", align 1
@.str.6 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"../\00", align 1
@.str.8 = private unnamed_addr constant [13 x i8] c"/path/to/foo\00", align 1
@.str.9 = private unnamed_addr constant [9 x i8] c"../foo.c\00", align 1
@.str.10 = private unnamed_addr constant [13 x i8] c"/path/to/bar\00", align 1
@.str.11 = private unnamed_addr constant [13 x i8] c"../bar/foo.c\00", align 1
@.str.12 = private unnamed_addr constant [13 x i8] c"/path/to/baz\00", align 1
@.str.13 = private unnamed_addr constant [12 x i8] c"../../foo.c\00", align 1
@.str.14 = private unnamed_addr constant [17 x i8] c"/path/to/foo/bar\00", align 1
@.str.15 = private unnamed_addr constant [16 x i8] c"../../foo/bar.c\00", align 1
@.str.16 = private unnamed_addr constant [19 x i8] c"/path/to/foo/bar.c\00", align 1
@.str.17 = private unnamed_addr constant [17 x i8] c"/path/to/bar/foo\00", align 1
@.str.18 = private unnamed_addr constant [7 x i8] c"/foo.c\00", align 1
@.str.19 = private unnamed_addr constant [9 x i8] c"/bar/foo\00", align 1
@.str.20 = private unnamed_addr constant [14 x i8] c"/path/to/bar/\00", align 1
@.str.21 = private unnamed_addr constant [17 x i8] c"d:/path/to/foo.c\00", align 1
@.str.22 = private unnamed_addr constant [11 x i8] c"d:/path/to\00", align 1
@.str.23 = private unnamed_addr constant [7 x i8] c"../foo\00", align 1
@.str.24 = private unnamed_addr constant [5 x i8] c"/foo\00", align 1
@.str.25 = private unnamed_addr constant [5 x i8] c"/bar\00", align 1
@.str.26 = private unnamed_addr constant [14 x i8] c"path/to/foo.c\00", align 1
@.str.27 = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.28 = private unnamed_addr constant [12 x i8] c"path/to/foo\00", align 1
@.str.29 = private unnamed_addr constant [12 x i8] c"path/to/bar\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.30 = private unnamed_addr constant [18 x i8] c"not-a-rooted-path\00", align 1
@.str.31 = private unnamed_addr constant [6 x i8] c"/path\00", align 1
@.str.32 = private unnamed_addr constant [10 x i8] c"pathtofoo\00", align 1
@.str.33 = private unnamed_addr constant [5 x i8] c"path\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_path_core__make_relative() #0 {
  %1 = call i32 @test_make_relative(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %2 = call i32 @test_make_relative(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %3 = call i32 @test_make_relative(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i32 0)
  %4 = call i32 @test_make_relative(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %5 = call i32 @test_make_relative(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i32 0)
  %6 = call i32 @test_make_relative(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0), i32 0)
  %7 = call i32 @test_make_relative(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.10, i64 0, i64 0), i32 0)
  %8 = call i32 @test_make_relative(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0), i32 0)
  %9 = call i32 @test_make_relative(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.14, i64 0, i64 0), i32 0)
  %10 = call i32 @test_make_relative(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.15, i64 0, i64 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.16, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.17, i64 0, i64 0), i32 0)
  %11 = call i32 @test_make_relative(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.19, i64 0, i64 0), i32 0)
  %12 = call i32 @test_make_relative(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i32 0)
  %13 = call i32 @test_make_relative(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.20, i64 0, i64 0), i32 0)
  %14 = call i32 @test_make_relative(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.21, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.22, i64 0, i64 0), i32 0)
  %15 = call i32 @test_make_relative(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.24, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.25, i64 0, i64 0), i32 0)
  %16 = call i32 @test_make_relative(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.26, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.27, i64 0, i64 0), i32 0)
  %17 = call i32 @test_make_relative(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.28, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.29, i64 0, i64 0), i32 0)
  %18 = load i32, i32* @GIT_ENOTFOUND, align 4
  %19 = call i32 @test_make_relative(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.22, i64 0, i64 0), i32 %18)
  %20 = load i32, i32* @GIT_ENOTFOUND, align 4
  %21 = call i32 @test_make_relative(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.21, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.21, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* @GIT_ENOTFOUND, align 4
  %23 = call i32 @test_make_relative(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.30, i64 0, i64 0), i32 %22)
  %24 = load i32, i32* @GIT_ENOTFOUND, align 4
  %25 = call i32 @test_make_relative(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.30, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.30, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %24)
  %26 = load i32, i32* @GIT_ENOTFOUND, align 4
  %27 = call i32 @test_make_relative(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.31, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.31, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.32, i64 0, i64 0), i32 %26)
  %28 = load i32, i32* @GIT_ENOTFOUND, align 4
  %29 = call i32 @test_make_relative(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.32, i64 0, i64 0), i32 %28)
  ret void
}

declare dso_local i32 @test_make_relative(i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
